<resources>
    <string name="app_name">Chess</string>
    <string name="start_button">Start Game</string>
    <string name="start_text">Click the Start Game button to play!</string>
    <string name="savedgames_button">Saved Games</string>
    <string name="quit_button">Quit</string>
    <string name="saved_text">Check out your saved games!</string>
    <string name="title_text">Welcome to Chess!</string>
    <string name="undo_button">Undo</string>
    <string name="ai_button">AI Move</string>
    <string name="draw_button">Draw</string>
    <string name="resign_button">Resign</string>
    <string name="nextmove_button">Next Move</string>
    <string name="saveheader">Save Game?</string>
    <string name="nosave_button">Exit</string>
    <string name="save_button">Save</string>
    <string name="savetextbox">Title</string>
    <string name="playbackmove">Move</string>
    <string name="playbackturn">Turn</string>
    <string name="datesort">Sort by Date</string>
    <string name="titlesort">Sort by Title</string>



</resources>